--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -7,7 +7,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/rollerstation">Roller Stations</a>
+                <a class="nav-link" href="/station">Stations</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/user">Users</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/logout">Exit</a>
